# stream

./: .coverage  .pre-commit-config.yaml  db.sqlite3  pyproject.toml  requirements.txt
api/: urls.py
api/serializers/: __init__.py  message.py
api/views/: __init__.py  message.py
app/migrations/: 0001_initial.py
app/models/: __init__.py  message.py  room.py
app/templates/: chat.html  home.html
app/tests/unit/apps/: test_home.py  test_message.py  test_message_drf.py
app/tests/unit/fixtures/: __init__.py  message.py  room.py  user.py
app/views/: __init__.py  chat.py
stream/: asgi.py  settings.py  urls.py  wsgi.py
