[tool.poetry]
name = "stream"
version = "0.1.0"
description = ""
authors = ["ngo quang dat <dat.ngoquang@glinteco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
